--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,14 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+@font-face{
+  font-family: norseRegular;
+  src: url("./norse.regular.otf") format("opentype");
+}
+
+body{
+
+  font-family: 'norseRegular', Fallback, sans-serif;
 }
 
 .App-header {
@@ -13,20 +18,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: top;
+  font-size: calc(30px + 2vmin);
+  color: black;
+  background-image: url("Rune-Wheel.png");
+  background-repeat: no-repeat;
 }
+
+#rcorners1 {
+  border-radius: 25px;
+  background: url(viking_rock.jpg);
+  background-position: left top;
+  background-repeat: repeat;
+  padding: 20px; 
+  width: 310px;
+  height: 200px;  
+}
+
+img :hover{
+  opacity: 0.5;
+  filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+
 
 .App-link {
-  color: #61dafb;
+  color: burlywood;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
